--- a/.github/archlinux/Dockerfile
+++ b/.github/archlinux/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY . .
 
+RUN pacman -Syu --noconfirm
+
 RUN pacman -Sy --noconfirm archlinux-keyring
 
 RUN pacman -Su --noconfirm gcc ninja cmake extra-cmake-modules qt5-base fontconfig harfbuzz git base-devel
